--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-torch
-numpy
-tqdm
-matplotlib
-music21
+torch>=2.0.0
+numpy>=1.24.0
+tqdm>=4.65.0
+matplotlib>=3.7.0
+music21>=9.1.0
+scipy>=1.10.0
